# atlas-auth

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.claude/: .gitignore  README.md  settings.json
docs/: README.md  api-contract.md  architecture.md  data-model.md  development-plan.md  security-policy.md
migrations/: 202606080001_init.sql  202606080002_expand_clients.sql  202606080003_create_authorization_codes.sql  202606080004_expand_refresh_tokens.sql  202606080005_create_consents.sql  202606080006_create_signing_keys.sql  202606080007_create_federated_identities.sql  202606080008_create_account_recovery_tokens.sql  202606080009_create_login_failure_counters.sql
scripts/: coverage-unit.sh
src/: app.rs  config.rs  error.rs  lib.rs  main.rs
tests/: account_recovery_endpoints.rs  account_recovery_repository.rs  account_recovery_schema_migration.rs  admin_api.rs  auth_login_lockout.rs  authorization_code.rs  authorization_code_repository.rs  authorization_code_schema_migration.rs  client_schema_migration.rs  consent_repository.rs  consent_schema_migration.rs  federated_identity_repository.rs  federated_identity_schema_migration.rs  health.rs  jwks.rs  login_attempt_repository.rs  login_attempt_schema_migration.rs  oauth_authorize.rs  oauth_authorize_client_repository.rs  oauth_authorize_consent.rs  oauth_client_policy.rs  oauth_client_repository.rs  oauth_introspect.rs  oauth_revoke.rs  oauth_token.rs  oauth_token_authorization_code_exchange.rs  oauth_token_client_credentials.rs  oauth_token_refresh_rotation.rs  (+9 more)
(+37 files in other folders)
