[package]
name = "atlas-auth"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[dependencies]
actix-web = "4.9"
anyhow = "1.0"
argon2 = { version = "0.5", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
dotenvy = "0.15"
hex = "0.4"
jsonwebtoken = "9.3"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
thiserror = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
actix-rt = "2.10"
